# scheduler

./: .gitignore  Cargo.toml  README.md  err.txt
.github/workflows/: basic.yml
migrations/2024-01-16-213913_create_users/: down.sql  up.sql
migrations/2024-01-17-182214_create_tasks/: up.sql
migrations/2024-01-17-202247_add_user_roles/: down.sql  up.sql
migrations/2024-03-15-155708_add_task_counts_to_users/: down.sql  up.sql
migrations/2024-03-15-165723_make_role_not_nullable/: down.sql  up.sql
migrations/2024-04-27-042829_is_admin/: down.sql  up.sql
migrations/2024-05-05-153244_create_tasks_users/: down.sql  up.sql
src/: auth.rs  db.rs  main.rs  models.rs  routes.rs  schema.rs
