[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.7", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
